@@ -1,3 +1,7 @@
+2003-11-15  Borut Razem <borut.razem@siol.net>
+
+	* src/SDCCmain.c: fixed bug #841645: -MM command line option passed to sdcpp
+
 2003-11-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
 	* src/SDCCcse.c (cseBBlock): fixed bug #527779
@@ -30,7 +34,7 @@
 
 2003-11-11 Bernhard Held <bernhard@bernhardheld.de>
 
-        * src/SDCCmain.c (linkEdit): "fix" #834252
+	* src/SDCCmain.c (linkEdit): "fix" #834252
 
 2003-11-11 Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
